--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -5,10 +5,10 @@
 #
 
 # Pull base image.
-FROM tamboraorg/crephpdev:2012.0
+FROM tamboraorg/crephpdev:2011.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de> 
 
-ARG BUILD_YEAR=2012
+ARG BUILD_YEAR=2011
 ARG BUILD_MONTH=0
 
 # Fixes some weird terminal issues such as broken clear / CTRL+L
@@ -87,8 +87,8 @@ RUN if [ $(echo " $PHP_VERSION < 7.2" | bc) -eq 1 ] ; then echo "old php" && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2 && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap4 && \
- composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug && \ 
- composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii && \
+ composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug:~2.1.0 && \ 
+ composer require --dev --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-app-basic && \ 
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-queue && \
  composer require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer && \
