--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -53,7 +53,7 @@ RUN composer global require --prefer-stable --update-with-all-dependencies npm-a
 #RUN composer require --prefer-stable --update-with-all-dependencies "bower-asset/bootstrap"
 
 RUN composer require --prefer-stable --update-with-all-dependencies fxp/composer-asset-plugin
-RUN composer require --prefer-stable --update-with-all-dependencies "miclabs/deep-copy"
+RUN composer require --prefer-stable --update-with-all-dependencies "myclabs/deep-copy"
 RUN composer require --prefer-stable --update-with-all-dependencies "symfony/polyfill-intl-idn"
 RUN composer require --prefer-stable --update-with-all-dependencies phpunit/php-text-template
 RUN composer require --prefer-stable --update-with-all-dependencies ralouphie/getallheaders
