--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -42,7 +42,6 @@ RUN cd /cre/tmp/yii \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-captcha \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-http-client \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-auth-client \
- && composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-queue \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/yii-debug \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-mysql \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-pgsql \
@@ -51,7 +50,7 @@ RUN cd /cre/tmp/yii \
  && composer require --prefer-stable --update-with-all-dependencies "foxy/foxy:^1.0.0" \
  && composer require --prefer-stable --update-with-all-dependencies jaeger/querylist 
 
-
+## yiisoft/yii-queue
 ## yiisoft/yii-masked-input
 
 # sync to www in entry-point
