Adapt to new structure

--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -57,6 +57,8 @@ RUN cd /cre/tmp/yii \
 
 #config/web.php
 
+RUN cd /cre/tmp/yii && composer dump-autoload
+
 ##VOLUME ["/cre/www/yii"]
 WORKDIR "/cre/www"
 
