--- a/crePostgis/Dockerfile
+++ b/crePostgis/Dockerfile
@@ -5,11 +5,13 @@ FROM tamboraorg/crepostgres:2011.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 #ENV POSTGIS_MAJOR 2.5
-ENV POSTGIS_MAJOR 2.3
+#ENV POSTGIS_MAJOR 2.3
+ENV POSTGIS_MAJOR 2.4
 #ENV POSTGIS_VERSION 2.3.2+dfsg-1~exp2.pgdg80+1
 #ENV POSTGIS_VERSION 2.3.2+dfsg-1~exp2.pgdg16.04+1
 #ENV POSTGIS_VERSION 2.5.1
-ENV POSTGIS_VERSION 2.3.2 
+#ENV POSTGIS_VERSION 2.3.2 
+ENV POSTGIS_VERSION 2.4.2 
 
 USER root
 
