--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -5,23 +5,23 @@
 # (adapted from https://github.com/dockerfile/ubuntu )
 
 # Pull base image.
-FROM ubuntu:18.04
+FROM ubuntu:16.04
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
-ARG BUILD_YEAR=2012
+ARG BUILD_YEAR=2011
 ARG BUILD_MONTH=0
 
 # version: yyyy.n for stable versions 
 #          0.yyyy for development - tagged automatically if base functionality is working 
-ENV CRE_VERSION 0.2012 
-ENV UBUNTU_VERSION 18.04
+ENV CRE_VERSION 0.2011 
+ENV UBUNTU_VERSION 16.04
 ENV OPENSSL_VERSION 1.0.2g
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
 ENV LC_CTYPE en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
-ENV TZ=Europe/Berlin
+ENV TZ=UTC
 ENV TERM xterm
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -47,6 +47,8 @@ RUN \
 
 RUN locale-gen en_US en_US.UTF-8 && \ 
     update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+
+RUN timedatectl set-timezone UTC
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \
     echo "$(date +'%F %R') \t creUbuntu \t $(cat /usr/lib/os-release | grep PRETTY | sed -e "s/^PRETTY_NAME=\"Ubuntu //" -e "s/\"$//")" >> /cre/versions.txt && \
