UTC now from Ubuntu

--- a/crePostgres/Dockerfile
+++ b/crePostgres/Dockerfile
@@ -9,7 +9,7 @@ ARG BUILD_MONTH=0
 ENV DEBIAN_FRONTEND noninteractive
 ENV INITRD No
 ENV POSTGRES_VERSION 9.5
-ENV TZ=UTC
+#ENV TZ=UTC
 
 LABEL Name="Postgres for CRE" \
       Year=$BUILD_YEAR \
