Some error/warning  fixing

--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -35,13 +35,16 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 RUN mkdir -p /cre/node/wc-template && \
     cd /cre/node && \
     vue create -d -f wc-template
-RUN echo "echo 'Install further node components for wc build'" >> /cre/node/wc-template/install.sh && \
+RUN echo "#!/usr/bin/env bash'" >> /cre/node/js-template/install.sh && \
+RUN echo "echo 'Install further node components for wc build'" > /cre/node/wc-template/install.sh && \
     chmod 775 /cre/node/wc-template/install.sh
+RUN cp /cre/node/vue-common/.eslintrc.js /cre/node/wc-template/
 
 RUN mkdir -p /cre/node/js-template/src && \
     cd /cre/node/js-template && \
     npm init -yes
-RUN echo "echo 'Install further node components for js build'" >> /cre/node/js-template/install.sh && \
+RUN echo "#!/usr/bin/env bash'" >> /cre/node/js-template/install.sh && \
+RUN echo "echo 'Install further node components for js build'" > /cre/node/js-template/install.sh && \
     chmod 775 /cre/node/js-template/install.sh
 
 ## Add temporary build directories 
