--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -36,7 +36,7 @@ RUN mkdir -p /cre/node/wc-template && \
     cd /cre/node && \
     vue create -d -f wc-template
 RUN echo "#!/usr/bin/env bash'" >> /cre/node/wc-template/install.sh && \
-RUN echo "echo 'Install further node components for wc build'" > /cre/node/wc-template/install.sh && \
+    echo "echo 'Install further node components for wc build'" > /cre/node/wc-template/install.sh && \
     chmod 775 /cre/node/wc-template/install.sh
 RUN cp /cre/node/vue-common/.eslintrc.js /cre/node/wc-template/
 
@@ -44,7 +44,7 @@ RUN mkdir -p /cre/node/js-template/src && \
     cd /cre/node/js-template && \
     npm init -yes
 RUN echo "#!/usr/bin/env bash'" >> /cre/node/js-template/install.sh && \
-RUN echo "echo 'Install further node components for js build'" > /cre/node/js-template/install.sh && \
+    echo "echo 'Install further node components for js build'" > /cre/node/js-template/install.sh && \
     chmod 775 /cre/node/js-template/install.sh
 
 ## Add temporary build directories 
