--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -67,7 +67,9 @@ RUN npm-install-peers
 RUN v "${CRE_VERSION}.0"
 ##
 
-RUN /cre/patch-vue-wc-wrapper.sh
+
+## check if patch is needed
+#RUN /cre/patch-vue-wc-wrapper.sh
 
 ENTRYPOINT ["/cre/vue-entrypoint.sh"]
 
