--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -35,7 +35,7 @@ RUN pip3 install tensorflow
 RUN curl https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-cpu-linux-x86_64-1.14.0.tar.gz
 
 RUN tar -C /usr/local -xzf libtensorflow-cpu-linux-x86_64-1.14.0.tar.gz
-RUN ldconfig
+#RUN ldconfig
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
    echo "$(date +'%F %R') \t creTensorflow \t $TENSORFLOW_VERSION" >> /cre/versions.txt 
